--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
   "author": "Yovika",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.12.2",
+    "axios": "^1.13.2",
     "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "got-scraping": "^4.1.2",
     "mongoose": "^8.17.0",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.6"
